<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_configure_rss"
        app:showAsAction="always"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/menu_configure_rss_title"/>
    <group
        android:id="@+id/group_other">

        <item
            android:id="@+id/menu_check_updates"
            android:enabled="false"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/menu_check_updates_title" />
        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_refresh_title" />
        <item
            android:id="@+id/menu_stop_refreshing"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_stop_refreshing_title"
            android:visible="false" />
    </group>
    <group
        android:id="@+id/group_help">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings_title"/>
        <item
            android:id="@+id/menu_send_feedback"
            android:icon="@drawable/ic_message_alert_black_24dp"
            android:title="@string/menu_send_feedback_title" />
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help_circle_black_24dp"
            android:title="@string/menu_help_title" />
    </group>
</menu>